tests/ftw/docker-compose.yml
# Copyright © 2023 Axkea, spacewander
# Copyright © 2025 United Security Providers AG, Switzerland
# SPDX-License-Identifier: Apache-2.0
---
services:
  albedo:
    image: ghcr.io/coreruleset/albedo:0.3.0
    environment:
      - MAX_BODY_SIZE=15728640 # 15 MiB

  chown:
    image: alpine:3.24
    command:
      - /bin/sh
      - -c
      - chown -R 101:101 /etc/envoy/logs
    volumes:
      - ./logs:/etc/envoy/logs:rw

  envoy:
    depends_on:
      - chown
      - albedo
    image: coraza-waf-envoy
    command:
      - -c
      - /etc/envoy/envoy.yaml
      - --log-format [%Y-%m-%d %T.%f][%t][%l][%n] [%g:%#] %v
      - --log-path
      - /etc/envoy/logs/envoy.log
    volumes:
      - ./envoy.yaml:/etc/envoy/envoy.yaml
      - ../../build/coraza-waf.so:/etc/envoy/coraza-waf.so
      - ./logs:/etc/envoy/logs:rw
    ports:
      - 8090:8090
    environment:
      - GODEBUG=cgocheck=0

  goFilter-logs:
    depends_on:
      - envoy
    image: debian:13-slim
    entrypoint: bash
    command:
      - -c
      - tail -c +0 -f /etc/envoy/logs/envoy.log | grep --line-buffered  "\[golang\]" > /etc/envoy/logs/ftw.log
    volumes:
      - ./logs:/etc/envoy/logs:rw

  ftw-crs:
    depends_on:
      - goFilter-logs
    build:
      context: .
      dockerfile: Dockerfile
      args:
        CRS_VERSION: ${CRS_VERSION:-4.25.2}
        FTW_VERSION: ${FTW_VERSION:-2.4.0}
    environment:
      - FTW_CLOUDMODE
      - FTW_INCLUDE
      - FTW_FAILFAST
    volumes:
      - ./logs:/etc/envoy/logs:ro
