tests/ftw/envoy-latest.yaml
# Copyright © 2023 Axkea, spacewander
# Copyright © 2025 United Security Providers AG, Switzerland
# SPDX-License-Identifier: Apache-2.0
---
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8090
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.golang
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
                      library_id: coraza-waf
                      library_path: /etc/envoy/coraza-waf.so
                      plugin_name: coraza-waf
                      plugin_config:
                          "@type": type.googleapis.com/xds.type.v3.TypedStruct
                          value:
                              log_format: ftw
                              directives: |
                                {
                                  "waf1":{
                                        "simple_directives":[
                                              "Include @coraza-ftw-latest",
                                              "Include @crs-ftw-latest",
                                              "Include @owasp_crs_latest/*.conf"
                                          ]
                                    }
                                }
                              default_directive: "waf1"
                              host_directive_map: |
                                {
                                  "foo.example.com":"waf1",
                                  "bar.example.com":"waf1"
                                }
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite_literal: 0.0.0.0:8080
                            cluster: service_gin

  clusters:
    - name: service_gin
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: service_gin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: albedo
                      port_value: 8080
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9999
