tests/ftw/ftw.yml
# Copyright © 2023 Axkea, spacewander
# Copyright © 2025 United Security Providers AG, Switzerland
# SPDX-License-Identifier: Apache-2.0
---
logfile: '/etc/envoy/logs/ftw.log'
maxmarkerretries: 10
testoverride:
  input:
    virtual_host_mode: true
    dest_addr: envoy
    port: 8090
    headers:
      Host: "foo.example.com"
